--- a/online-portolio/style.css
+++ b/online-portolio/style.css
@@ -12,6 +12,22 @@ img {
 
 }
 
+.suranna-regular {
+  font-family: "Suranna", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+// <uniquifier>: Use a unique and descriptive class name
+// <weight>: Use a value from 100 to 700
+
+.josefin-sans-<uniquifier> {
+  font-family: "Josefin Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <400>;
+  font-style: normal;
+}
+
 h1 {
  
 }
@@ -21,5 +37,8 @@ h2 {
 }
 
 button {
-
+    border-radius: 25px;
+    background-color: #4a6c89
+    width: 200px;
+    padding: 5px;
 }
