--- a/online-portolio/style.css
+++ b/online-portolio/style.css
@@ -2,43 +2,152 @@
  * Dark Blue: #4a6c89
  * Light Blue: #b1cae0
  */
+@media {
+
 body {
     background-color: #b1cae0;
 }
 
 img {
-    width: 200px;
+    width: 250px;
     border: solid 5px #5a6c89;
-
+    border-radius: 50%;
+    text-align: center;
+    margin: auto;
+    display: block;
 }
+    
+    #bio {
+        margin:auto;
+    }
 
+    #idphoto {
+       
+    }
+    
 .suranna-regular {
-  font-family: "Suranna", serif;
-  font-weight: 400;
-  font-style: normal;
+    font-family: "Suranna", serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
-// <uniquifier>: Use a unique and descriptive class name
-// <weight>: Use a value from 100 to 700
-
-.josefin-sans-<uniquifier> {
-  font-family: "Josefin Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <400>;
-  font-style: normal;
+.josefin-sans-<uniquifier > {
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: <400>;
+    font-style: normal;
 }
 
 h1 {
- 
+    font-family: "Suranna", serif;
+    text-align: center;
+    font-size: 50px;
 }
 
-h2 {
-
+h5 {
+    font-family: "Suranna", serif;
+    text-align: center;
+    font-size: 25px;
 }
 
 button {
     border-radius: 25px;
-    background-color: #4a6c89
-    width: 200px;
-    padding: 5px;
+    background-color: #4a6c89;
+    width: 150px;
+    padding: 10px;
+    border: none;
+    color: white;
+    font-family: "Josefin Sans", sans-serif;
+    align-self: center;
+    font-weight: 400;
+}
+    
+    #buttonthing a{
+        color: white;
+        text-decoration: none;    
+    }
+
+    button:hover {
+        text-decoration: underline;
+    }    
+    
+h8 {
+    font-family: "Suranna", serif;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+}
+
+h6 {
+    text-decoration: underline;
+    font-family: "Suranna", serif;
+}
+
+p1 {
+    font-weight: bold;
+    font-family: "Josefin Sans", sans-serif;
+}
+p2 {
+    font-family: "Josefin Sans", sans-serif;
+    font-style: italic;
+}
+p3 {
+    font-family: "Josefin Sans", sans-serif;
+}
+p4 {
+    font-family: "Josefin Sans", sans-serif;
+    font-weight: 300;
+}
+
+.container {
+    height: 50px;
+    position: relative;
+}
+.center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+    
+#navigation {
+    background-color: #4a6c89;
+    text-align: center;
+    }
+    
+    #navigation a{
+        color: white;
+        text-decoration: none;
+    }
+    
+    #navigation a:hover{
+        text-decoration: underline;
+        font-weight: bolder;
+    }
+    
+    #copyright {
+        background-color: #4a6c89;
+        text-align: center;
+    }
+    
+}
+
+@media (min-width:1000px) {
+    h1 {
+        font-size: 60px;
+    }
+    
+    h5 {
+        font-size: 30px;
+    }
+    
+    img {
+        width: 300px;
+    }
+    
+    .intro {
+            
+}
 }
