--- a/final-project/style.css
+++ b/final-project/style.css
@@ -2,7 +2,7 @@
     body {
         background-color: #0c0e19;
         color: white;
-        font-family: Georgia;
+        font-family: "Merriweather", serif;
     }
 
     img {
