--- a/final-project/style.css
+++ b/final-project/style.css
@@ -1,8 +1,8 @@
 @media {
     body {
-        background-color: #0c0e19;
         color: white;
         font-family: "Merriweather", serif;
+        background-color: #0c0e19;
     }
 
     img {
@@ -21,7 +21,11 @@
         padding-right: 25%;
     }
 
-    #body {
+    #body2 {
+        padding-left: 25%;
+        padding-right: 25%;
+    }
+    #body1 {
         padding-left: 25%;
         padding-right: 25%;
     }
@@ -52,7 +56,7 @@
     h6 {
         padding-left: 20%;
         padding-right: 20%;
-    } s
+    }
 }
 
 @media (max-width: 992px) {
